:hammer: Ref [#88] 채팅 기능 리팩토링 (채팅 알림 제외)